--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>YouTube BrightOsense</title>
-  <style>
-    body {
-      padding: 1rem 2rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="popupInfo"></div>
+  <head>
+    <title>BrightOsense</title>
+    <style>
+      body {
+        padding: 1rem 2rem;
+        background-color: #333;
+        accent-color: rgb(158, 153, 153);
+        color: #ffffff;
+      }
+      .control-container {
+        margin-bottom: 1rem;
+      }
+      .control-label {
+        display: inline-block;
+        width: 150px;
+      }
+      .control-value {
+        display: inline-block;
+        width: 50px;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Minimum Brightness -->
 
-  <script src="popup.js"></script>
-</body>
+    <h2 style="margin: 0">Bright-O-sense</h2>
+    <h5 style="margin-top: 0">for <span style="color: rgba(231, 16, 16, 0.946);">YouTube </span></h5>
+    
+    <div class="controls-section">
+      <div class="control-container">
+        <label class="control-label" for="minBrightness"
+          >Minimum Brightness:</label
+        >
+        <input type="range" id="minBrightness" min="0" max="100" />
+        <span class="control-value" id="minBrightnessValue"></span>
+      </div>
+
+      <!-- Maximum Brightness -->
+      <div class="control-container">
+        <label class="control-label" for="maxBrightness"
+          >Maximum Brightness:</label
+        >
+        <input type="range" id="maxBrightness" min="0" max="100" />
+        <span class="control-value" id="maxBrightnessValue"></span>
+      </div>
+
+      <!-- Difference Threshold -->
+      <div class="control-container">
+        <label class="control-label" for="differenceThreshold"
+          >Difference Threshold:</label
+        >
+        <input
+          type="range"
+          id="differenceThreshold"
+          min="0"
+          max="30"
+        />
+        <span class="control-value" id="differenceThresholdValue"></span>
+      </div>
+    </div>
+
+    <h4 style="text-align: center; margin-bottom: 0;">Made by <span style="color: rgba(231, 16, 16, 0.946)">AKKI </span></h4>
+
+    <script src="popup.js"></script>
+  </body>
 </html>
